fix: jdk 11 compile errors